Fix summary display on firefox

--- a/assets/stylesheets/book/summary.less
+++ b/assets/stylesheets/book/summary.less
@@ -22,6 +22,8 @@
             padding: 0px;
 
             li {
+                list-style: none;
+                
                 &.divider {
                     height: 1px;
                     margin: 7px 0;
